[package]
name = "nesapod"
version = "0.1.0"
authors = ["Dominick Allen <dominick.allen1989@gmail.com>"]

[dependencies]
conrod = { version = "0.56.0", features = ["winit", "glium"]}
getopts = "0.2.15"
bitflags = "1.0.1"
pancurses = "0.13.0"
time = "0.1.39"

[features]
winit = []
glium = []

[[bin]]
name = "nesapod"
required-features = ["winit", "glium"]